# 0wallet

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
infrastructure/database/migrations/: env.py
infrastructure/database/migrations/versions/: 4b9d9d270cf1_first_migration.py  8678d79fb86b_first_migration.py
src/: main.py
src/common/: containers.py  database.py
src/common/settings/: __init__.py  app.py  auth.py  database.py
src/domain/entities/: user.py
src/domain/models/: __init__.py  user.py
src/repositories/: user.py
src/routes/: __init__.py  user.py
src/services/: user.py
